tests/golden/type_errors/generic_duplicate_type_parameter.cd
fun duplicate<T, T>(value: T): T { return value; }
