tests/golden/type_errors/generic_duplicate_type_parameter.err
Type error at 1:18: duplicate type parameter `T`
  fun duplicate<T, T>(value: T): T { return value; }
                   ^
